@startuml
'skinparam settings
skinparam classAttributeIconSize 0
hide circle
hide methods

' Agregado: User Aggregate (agrupa User, Reader, Librarian)
package "User Aggregate" {
    class User {
        - password
        - username
        - name
    }

    class Librarian {
    }
    Librarian "1" -up- "1" User : > is
}

' Agregado: Reader Aggregate
package "Reader Aggregate" {
    class Reader {
            - readerNumber
            - email
            - phoneNumber
            - birthDate
            - gdprConsent
            - marketingConsent
            - thirdPartySharing
            - photo
    }
}

' Agregado: Author Aggregate (agrupa Author)
package "Author Aggregate" {
    class Author {
        - authorNumber
        - name
        - photo
        - short bio
    }
}

' Agregado: Book Aggregate (agrupa Book)
package "Book Aggregate" {
    class Book {
        - isbn
        - title
        - description
        - photo
    }

}

' Agregado: Genre Aggregate
package "Genre Aggregate" {


    class Genre {
        - genre: string
    }


}

' Agregado: Lending Aggregate (agrupa Lending, Fine)
package "Lending Aggregate" {
    class Lending {
        - lendingNumber
        - startDate
        - limitDate
        - returnedDate
        - fineValuePerDay
    }

    class Fine {
        - value
    }

    Lending "1" -- "0..1" Fine
}

' Relacionamentos entre agregados
Book "1" -- "1" Genre : > has
Librarian "1" -- "0..*" Author : registers/updates >
Librarian "1" -- "0..*" Book : registers/updates >
Reader "1" -up- "1" User : > is
Lending "0..*" -up- "1" Reader: request <
Lending "0..*" - "1" Book: requested for >
Book "1..*" -up- "1..*" Author: write <

@enduml

